# BiomniBench-AI4S

./: .env.example  .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
configs/: backends.yaml  models.yaml
docs/: parity-caveats.md  running-competitors.md
logos/badges/: shields_markdown.txt
reports/final/: dual-judge.md  dual_judge_scores.json  leaderboard.md  leaderboard_accuracy.html  leaderboard_accuracy_dark.html  leaderboard_mean.html  leaderboard_mean_dark.html  matrix.csv  matrix_dualjudge.csv
scripts/: biomni_run.py  build_leaderboard.py  claude-csswitch.sh  evosci-apptainer.sh  export_trajectories.py  opencode-ai4s.sh  plot_leaderboard.py  plot_leaderboard_html.py  redact_omicos_trajectories.py  synsci-run.sh  wisp-run.sh
src/biology_bench/: __init__.py  _biomni.py  cli.py  matrix.py  prompts.py
src/biology_bench/adapters/: __init__.py  base.py  biomni_adapter.py  claude_csswitch_adapter.py  desktop_stub.py  evoscientist_adapter.py  omicos_adapter.py  openscience_ai4s_adapter.py  openscience_synsci_adapter.py  wisp_adapter.py
trajectories/: README.md
