[project]
name = "biology-bench"
version = "0.1.0"
description = "Cross-agent BiomniBench-DA harness: run omicos + third-party science agents on the same tasks, graded by the same rubric judge."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
biology-bench = "biology_bench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
